--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "mongodb": "^6.10.0",
+    "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
+    "passport-oauth2": "^1.8.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1"
   }
